# utc_timezone

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
employees/: admin.py  models.py
employees/management/commands/: create_users.py  fix_email.py  populate_employees.py
employees/migrations/: 0001_initial.py  0002_remove_employee_middle_name_employee_position_and_more.py  0003_position_alter_employee_position.py
fixtures/: i_c_reports.json  i_reports.json  incident_categories.json
incidents/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
incidents/management/commands/: populate_incident_reports.py
incidents/migrations/: 0001_initial.py  0002_remove_incidentreport_is_multiple_person_and_more.py
templates/: _base.html
templates/incidents/: incident_report_list.html
