[project]
name = "utc-timezone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django==5.2",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "faker>=40.8.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "werkzeug>=3.1.6",
]
